--- a/passportAuth/package.json
+++ b/passportAuth/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^10.0.0",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
