--- a/members-only/package.json
+++ b/members-only/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "uuid": "^11.1.0"
   }
 }
